<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">e-Notice App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="classname">Class</string>
    <string name="class_prompt">Choose your Class</string>
    <string name="noticedetail">Notice Details</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="mob">Mobile Number</string>
    <string name="email">abc@xyz.com</string>
    <string name="photo">Photo</string>
    <string name="gallery">Gallery</string>
    <string name="resetpassspeech">We have been experiencing security attacks on our site. In order to ensure safety of your account we have reset your password. Please create a new password to proceed.</string>
    <string name="title">Title</string>
    <string name="resetinfo">Enter Username Used While Creating Account</string>
    <string name="description">Description</string>
    <string name="forgot">Forget Password?</string>
    <string name="enteruser">Enter your Username</string>
    <string name="resetpass">Reset Password</string>
    <string name="admin">Admin Panel</string>
    <string name="enterpass">Enter new Password</string>

</resources>
