<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:padding="10dp">
    <EditText 
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first"
            android:drawableLeft="@drawable/pencil"
            android:padding="10dp"/>
    <EditText 
            android:id="@+id/last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last"
            android:drawableLeft="@drawable/pencil"
            android:padding="10dp"/>
    <EditText 
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:drawableLeft="@drawable/user"
            android:padding="10dp"/>
    <EditText 
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/password"
            android:padding="10dp"/>
    <EditText 
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:drawableLeft="@drawable/email"/>
    <EditText 
            android:id="@+id/mob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mob"
            android:drawableLeft="@drawable/mob"
            android:padding="10dp"/>
    
    
    <Button
        android:id="@+id/register"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/register"
        android:onClick="registerUser"
        android:layout_gravity="center"
        android:padding="10dp"/>   

</LinearLayout>
</ScrollView>