<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetpassspeech"
        android:layout_gravity="center"
        android:padding="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetinfo"
        android:textColor="#666666"
        android:padding="20dp"/>
    <EditText 
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enteruser"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="5dp"
        android:padding="10dp"
        />
    <EditText 
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterpass"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="5dp"
        android:padding="10dp"
        />
    <Button 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="getPassword"
        android:text="@string/resetpass"
        android:drawableLeft="@drawable/reset"
        android:drawablePadding="5dp"
        
        android:layout_gravity="center"/>

</LinearLayout>
